Removes beanstalk related pipelines 2